Fixes spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -157,6 +157,7 @@ p {
   width: 767px;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
+  margin-bottom: 40px;
 }
 
 .blogs-container {
@@ -197,7 +198,7 @@ p {
   justify-content: center;
   color: beige;
   border-top: solid 2px rgb(68, 88, 117);
-  padding: 10px;
+  padding: 20px;
 }
 
 @media (min-width: 767px) {
@@ -237,6 +238,7 @@ p {
 @media (min-width: 767px) {
   .top-section {
     margin-top: 150px;
+    margin-bottom: 50px;
   }
 }
 
@@ -257,12 +259,6 @@ section {
   display: flex;
   justify-content: flex-start;
   margin: 0;
-}
-
-@media (min-width: 767px) {
-  section {
-    margin-top: 50px;
-  }
 }
 
 .headline-container {
@@ -316,13 +312,14 @@ section {
 .romaimage {
   width: 100%;
   max-width: 300px;
-  /* padding: 10px; */
+ 
 }
 
 @media (min-width: 767px) {
   .romaimage {
     grid-column: 1/2;
     grid-row: 1/3;
+     padding-right: 16px ;
   }
 }
 
@@ -397,16 +394,9 @@ section {
 @media (min-width: 767px) {
   .divider {
     font-size: 3rem;
-    font-family: "Teko";
-    opacity: 0.9;
-    display: block;
-    background-image: linear-gradient(
-      to left,
-      rgb(92, 126, 141, 0.001),
-      rgb(92, 126, 141, 0.2)
-    );
     width: 60%;
     margin-bottom: 20px;
     padding: 10px;
+     text-align: left;
   }
 }
